<resources>
    <string name="app_name">Tip Time</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="how_was_the_service">Tip (%)</string>
    <string name="round_up_tip">Round up tip? </string>


</resources>